add link on vk to description [du] on index page

--- a/index.html
+++ b/index.html
@@ -170,6 +170,7 @@
 		    Organizer:&nbsp;&nbsp;&nbsp;<span class="label label-info">toywar (Roman Ekimov)</span><br/>
 		    Location is:&nbsp;&nbsp;&nbsp;<span class="label label-info">Krasnoznamensk City (KC)</span><br/>
 		    Description:&nbsp;&nbsp;&nbsp;<span class="label label-info">Drink Pepsi, go to the cinema</span><br/>
+		    Link on vk.com:&nbsp;&nbsp;&nbsp;<span class="label label-warning"><a href="http://vk.com/underthesea_drinkup?w=wall-44548675_42%2Fall" target="_blank">Wall entry: 42</a></span><br/>
 		 </fieldset>
 	  </div>
 	   <div class="modal-footer">
