mv past to passed, modify links, edit index page

--- a/about.html
+++ b/about.html
@@ -102,7 +102,7 @@
             <div class="container">
               <ul class="nav">
                 <li><a href="index.html">[home]</a></li>
-                <li><a href="past.html">[past:drinkups]</a></li>
+                <li><a href="past.html">[passed:drinkups]</a></li>
                 <li class="active"><a href="about.html">[about]</a></li>
               </ul>
             </div>
