--- a/past.html
+++ b/past.html
@@ -3,7 +3,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>[toywar:drinkup] - [past:drinkups]</title>
+    <title>[toywar:drinkup] - [passed:drinkups]</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
     <meta name="author" content="">
@@ -102,7 +102,7 @@
             <div class="container">
               <ul class="nav">
                 <li><a href="index.html">[home]</a></li>
-                <li class="active"><a href="past.html">[past:drinkups]</a></li>
+                <li class="active"><a href="past.html">[passed:drinkups]</a></li>
                 <li><a href="about.html">[about]</a></li>
               </ul>
             </div>
