modify index.html - passed drinkup

--- a/index.html
+++ b/index.html
@@ -145,14 +145,14 @@
       <div class="row-fluid">
         <div class="span4">
           <h4 align=center>KC [drinkup] on Saturday, 27 July<br/>at 7:00 pm</h4>
-		  <p align=center><span class="label label-success">In Progress</span></p>
+		  <p align=center><span class="label label-info">Finished</span></p>
           <p align=center><a data-toggle="modal" data-target="#lastdrink1" class="btn btn-large btn-info">View details &raquo;</a></p>
         </div>
         
         <div id="lastdrink1" class="modal hide fade">
 	  <div class="modal-header">
 	    <button type="button" class="close" data-dismiss="modal">×</button>
-	      <h4>KC [drinkup] on Saturday, 27 July at 7:00 pm &nbsp;<span class="label label-success">In Progress</span></p></h4>
+	      <h4>KC [drinkup] on Saturday, 27 July at 7:00 pm &nbsp;<span class="label label-info">Finished</span></p></h4>
 	  </div>
 	  <div class="modal-body">
 		<fieldset>
