modify [about] page

--- a/about.html
+++ b/about.html
@@ -109,7 +109,19 @@
           </div>
         </div><!-- /.navbar -->
       </div>
-<h1> In progress... </h1>
+<center>
+	<div class="page-header">
+	    <h1>About us<small><br/>Some contacts for communication</small></h1>
+	</div>
+	<script type="text/javascript" src="//vk.com/js/api/openapi.js?98"></script>
+		<!-- VK Widget -->
+		<div id="vk_groups"></div>
+		<script type="text/javascript">
+		VK.Widgets.Group("vk_groups", {mode: 0, width: "300", height: "100", color1: 'FFFFFF', color2: '2B587A', color3: '5B7FA6'}, 44548675);
+	</script>
+</center>
+
+
       <hr/>
       <div class="footer">
         <p align=center>&copy; <a href="http://www.toywar.ru/" target="_blank">www.toywar.ru</a>, 2013</p>
